<resources>
    <string name="app_name">MaverickAndSkills</string>
    <string name="maverick_skills"><![CDATA[Maverick & Skills]]></string>
    <string name="members">Members :</string>
    <string name="gurvir_singh_tarlok_singh_bhogal">Gurvir Singh Tarlok Singh Bhogal</string>
    <string name="abhishek_shinde">Abhishek Shinde</string>
    <string name="shubham_dilip_padamwar">Shubham Dilip Padamwar</string>
    <string name="rishi_kumar_soni">Rishi Kumar Soni</string>
    <string name="team_01_agile_workers">Team 01 - Agile Workers</string>
    <string name="abhishek_nagaraj">Abhishek Nagaraj</string>
    <string name="logout">logout</string>
    <string name="register">Register</string>
    <string name="events">Events</string>
    <string name="welcome_to_maverick_and_skills">Welcome to Maverick and Skills</string>
    <string name="settings">Settings</string>
    <string name="search_profile_tags">Search profile tags</string>
    <string name="submit">Submit</string>
    <string name="blaze">blaze</string>
    <string name="settings_page">Settings Page</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="join">join</string>
    <string name="all_events_are_displayed_below">All events are displayed below</string>
    <string name="create_event">Create Event</string>
    <string name="events_page">Events Page</string>
    <string name="delete_account">Delete Account</string>
    <string name="skills">skills</string>
    <string name="search">Search</string>
</resources>
