<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="411dp"
        android:layout_height="215dp"
        android:background="#3F51B5"
        android:fontFamily="sans-serif"
        android:paddingLeft="50px"
        android:paddingTop="120px"
        android:text="@string/welcome_to_maverick_and_skills"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="41sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/eventsTabButton"
        android:layout_width="183dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:text="@string/events"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/settingsPage"
        android:layout_width="183dp"
        android:layout_height="160dp"
        android:background="#FFFFFF"
        android:text="PROFILES "
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/settingsPage2"
        android:layout_width="183dp"
        android:layout_height="160dp"
        android:background="#FFFFFF"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventsTabButton"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/settingsPage3"
        android:layout_width="183dp"
        android:layout_height="160dp"
        android:background="#FFFFFF"
        android:text="About Us"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventsTabButton"
        app:layout_constraintVertical_bias="0.087" />
</androidx.constraintlayout.widget.ConstraintLayout>