<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event_Page">

    <!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/cardView"-->
<!--        android:layout_width="385dp"-->
<!--        android:layout_height="230dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginLeft="24dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginRight="24dp"-->
<!--        android:padding="10dp"-->
<!--        app:cardBackgroundColor="@android:color/holo_blue_light"-->
<!--        app:cardCornerRadius="12dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.142">-->

<!--        <Button-->
<!--            android:id="@+id/joinEvent"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="60px"-->
<!--            android:layout_marginLeft="60px"-->
<!--            android:layout_marginTop="175dp"-->
<!--            android:text="Join Event" />-->

<!--        <Button-->
<!--            android:id="@+id/joinChat"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="250dp"-->
<!--            android:layout_marginLeft="250dp"-->
<!--            android:layout_marginTop="175dp"-->
<!--            android:text="Join Chat" />-->

<!--        <TextView-->
<!--            android:id="@+id/eName"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:padding="10dp"-->
<!--            android:text="Event Name" />-->

<!--        <TextView-->
<!--            android:id="@+id/eDate"-->
<!--            android:layout_width="160dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginVertical="60dp"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:padding="10dp"-->
<!--            android:text="Event Date" />-->

<!--        <TextView-->
<!--            android:id="@+id/eTime"-->
<!--            android:layout_width="160dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginVertical="60dp"-->
<!--            android:layout_marginLeft="214dp"-->
<!--            android:padding="10dp"-->
<!--            android:text="Event Time" />-->

<!--        <TextView-->
<!--            android:id="@+id/eDesc"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="51dp"-->
<!--            android:layout_marginVertical="110dp"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:padding="10dp"-->
<!--            android:text="Event Description" />-->
<!--    </androidx.cardview.widget.CardView>-->


    <TextView
        android:id="@+id/textView2"
        android:layout_width="190dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:gravity="center_horizontal"
        android:text="@string/events_page"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="380dp"
        android:layout_height="375dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:background="#4CAF50"
        android:text="@string/create_event"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview"
        app:layout_constraintVertical_bias="0.659" />

    <Button
        android:id="@+id/joinEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        app:layout_constraintBottom_toTopOf="@+id/createEventButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_events_are_displayed_below"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.222" />


</androidx.constraintlayout.widget.ConstraintLayout>